# meshcat-viz-python

./: README.md  setup.cfg
.github/workflows/: ci_cd.yml
src/meshcat_viz/: __init__.py  contacts.py  heightmap.py  logging.py  model.py  model_builder.py  visual.py  world.py
src/meshcat_viz/fk/: idyntree_provider.py  jaxsim_provider.py  provider.py
src/meshcat_viz/meshcat/: __init__.py  __main__.py  commands.py  geometry.py  light.py  material.py  server.py  visualizer.py
