[metadata]
name = meshcat-viz
version = 0.1
description = Generic visualizer of robot models based on MeshCat.
long_description = file: README.md
long_description_content_type = text/markdown
author = Diego Ferigo
author_email = diego.ferigo@iit.it
license = BSD
license_files = LICENSE
platforms = any
url = https://github.com/ami-iit/meshcat-viz-python

project_urls =
    Changelog = https://github.com/ami-iit/meshcat-viz-python/releases
    Source = https://github.com/ami-iit/meshcat-viz-python
    Tracker = https://github.com/ami-iit/meshcat-viz-python/issues

keywords =
    description
    gui
    mesh
    meshcat
    robot
    robotics
    sdf
    simulation
    urdf
    visualizer

classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Robot Framework
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Intended Audience :: Education
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Games/Entertainment :: Simulation

[options]
zip_safe = False
packages = find:
package_dir =
    =src
python_requires = >=3.8
install_requires =
    coloredlogs
    jaxsim @ git+https://github.com/ami-iit/jaxsim
    meshcat
    numpy
    rod @ git+https://github.com/ami-iit/rod

[options.packages.find]
where = src
